# cordova-plugin-tesseract

./: .gitignore  copy_deps.sh  package.json  plugin.xml  test_init.sh
android_bind/: build_to_deps.sh  settings.gradle
android_bind/app/: build.gradle
android_bind/app/src/androidTest/java/com/github/centny/tess/bind/: ExampleInstrumentedTest.java
android_bind/app/src/main/: AndroidManifest.xml
android_bind/app/src/main/java/com/github/centny/tess/bind/: MainActivity.java
android_bind/app/src/main/res/values/: strings.xml
android_bind/gradle/wrapper/: gradle-wrapper.properties
android_bind/tesseract/: build.gradle
android_bind/tesseract/src/main/: AndroidManifest.xml
android_bind/tesseract/src/main/cpp/: CMakeLists.txt  tesseract.cpp
android_bind/tesseract/src/main/java/com/github/centny/tess/: Tesseract.java
android_bind/tesseract/src/test/java/com/github/centny/tess/: ExampleUnitTest.java
example/js/: index.js
scripts/: beforeInstall.js  beforePluginInstall.sh
src/android/: Tesseract.java  settings.gradle  tesseract.gradle
src/android/app/src/main/res/menu/: menu_main.xml
src/android/tesseract/src/androidTest/java/com/github/centny/tess/: ExampleInstrumentedTest.java
src/android/tesseract/src/main/cpp/: CMakeLists.txt  tesseract.cpp
src/objc/: Tesseract.mm
src/objc/iosapp/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
src/objc/osxapp/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
src/objc/osxapp/Base.lproj/: Main.storyboard
src/objc/tess/: tess.h  tess.mm
src/objc/tess.xcodeproj/: project.pbxproj
src/objc/tess.xcodeproj/project.xcworkspace/xcuserdata/vty.xcuserdatad/: UserInterfaceState.xcuserstate
src/objc/tess.xcodeproj/xcuserdata/vty.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
src/objc/tess.xcodeproj/xcuserdata/vty.xcuserdatad/xcschemes/: xcschememanagement.plist
src/objc/tessios/: tessios.h
src/objc/tessosx/: tessosx.h
src/windows/: build.bat  tessjs.sln  test-all.bat  test-arch.bat
src/windows/app/: MainPage.xaml  MainPage.xaml.cs  Package.appxmanifest  app.csproj
src/windows/app/Properties/: AssemblyInfo.cs
src/windows/console/: Program.cs  Tesseract.cs  console.csproj
src/windows/console/Properties/: AssemblyInfo.cs
src/windows/tessc/: copy_tessdata.bat  tessc.cpp  tessc.h  tessc.vcxproj  tessc.vcxproj.filters
src/windows/tessjs/: Tesseract.cs  tessjs.csproj
src/windows/tessjs/Properties/: AssemblyInfo.cs
src/windows/tessrawc/: dllmain.cpp  tessrawc.vcxproj  tessrawc.vcxproj.filters
src/windows/test/: Package.appxmanifest  TesseractTest.cs  test.csproj
www/: Tesseract.js
(+3 files in other folders)
